[DEV-11014] - work with new create api (#44)
